Tweaks to get the modal be in the correct position.  Also made sure it looks nice on iPhone 5s and 5c.

--- a/public/assets/css/_enemy-team.scss
+++ b/public/assets/css/_enemy-team.scss
@@ -143,4 +143,13 @@
 			}
 		}
 	}
+	&.tiny{
+		.team-wrapper {
+			.team {
+				.hero {
+					margin-right: 0;
+				}
+			}
+		}
+	}
 }
